# video-scene

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: plugin-development.md  skill.md  usage.md
plugins/: plugin_sdk.py  pyproject.toml
plugins/embedding_plugin/: __init__.py  main.py  plugin.toml
plugins/image_clip_plugin/: __init__.py  main.py  plugin.toml
plugins/insightface_plugin/: __init__.py  main.py  plugin.toml
plugins/object_yolo_plugin/: __init__.py  main.py  plugin.toml
plugins/scene_detect_plugin/: __init__.py  main.py  plugin.toml
plugins/scene_understanding_plugin/: main.py  plugin.toml
plugins/video_understanding_plugin/: main.py  plugin.toml
scripts/: package_plugins.sh
src/: error.rs  lib.rs  main.rs
src/backup/: face.rs  mod.rs  workspace.rs
src/cli/: mod.rs  output.rs
src/config/: mod.rs  settings.rs  state.rs
src/core/: face_extractor.rs  indexer.rs  mod.rs  pipeline.rs  searcher.rs  timing.rs
src/models/: detection.rs  face_library.rs  mod.rs  segment.rs  video.rs
src/plugins/: client.rs  config.rs  daemon.rs  manager.rs  mod.rs  process.rs  protocol.rs
src/plugins/handlers/: face.rs  image_text_understanding.rs  (+6 more)
src/preprocess/: frame_extractor.rs  mod.rs  resizer.rs  scene_detector.rs  video_analyzer.rs
src/storage/: config_db.rs  database.rs  file_store.rs  migration.rs  mod.rs  vector_index.rs
src/web/: api.rs  mod.rs  server.rs  static_files.rs  types.rs
tests/: cli_test.rs
web/: .prettierrc  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
(+7 files in other folders)
