[package]
name = "video-scene"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
rayon = "1"
toml = "0.8"
shellexpand = "3"
indicatif = "0.17"
jieba-rs = "0.9"
crossbeam-channel = "0.5"
libc = "0.2"
ctrlc = "3"
tar = "0.4"
flate2 = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
rust-embed = "8"
mime_guess = "2"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
